CourseDTO added